# dev-sandbox-cli

./: README.md  pyproject.toml  sandbox.py
profiles/default/: Dockerfile  mounts.json  rebuild_triggers.txt
profiles/default/image/: Dockerfile
sandbox/: cli.py
sandbox/profiles/default/: config.json
sandbox/profiles/default/image/: Dockerfile  entrypoint.sh
sandbox/templates/default/: config.json
sandbox/templates/default/image/: Dockerfile
sandbox/templates/workspace/: config.json
sandbox/templates/workspace/image/: Dockerfile
